--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,37 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
+  
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyC_PugLXNt71yGUl7ZfqoDgJKgDkqd_mEE",
+      authDomain: "shopping-backend-firebas-e22e1.firebaseapp.com",
+      databaseURL: "https://shopping-backend-firebas-e22e1.firebaseio.com",
+      projectId: "shopping-backend-firebas-e22e1",
+      storageBucket: "shopping-backend-firebas-e22e1.appspot.com",
+      messagingSenderId: "431089870058",
+      appId: "1:431089870058:web:261163f75863cc43f1a393",
+      measurementId: "G-567KHFJCYS"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
 </body>
 </html>
